# MarketMind

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  marketmind  pyproject.toml  requirements.txt  start-prod.sh  tickeragent
.devin/: wiki.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
api/: auth.py  main.py
api/routes/: agents.py  compliance.py  config.py  insights.py  ops.py  reports.py  search.py
connectors/: base.py  registry.py
connectors/api/: rss_connector.py
connectors/providers/: __init__.py  alpha_vantage.py  base_provider.py  cboe.py  ddg.py  finra.py  finviz.py  fmp.py  fred.py  polygon.py  reddit.py  sec_edgar.py
connectors/web/: http_connector.py
core/: config.py  contracts.py  entities.py  memory.py  processing.py  source_discovery.py
core/db/: __init__.py  connection.py  coverage.py  filings.py  financials.py  insights.py  macro.py  reports.py  retention.py  search_history.py  social.py  sources.py
core/llm/: __init__.py  formatters.py  generators.py  prompts.py  providers.py  streaming.py
core/pipeline/: __init__.py  enrichment.py  intelligence.py  query.py  ranking.py  retrieval.py  stream.py  yfinance_analyst.py  yfinance_inline.py
docker/: Dockerfile.app  Dockerfile.dashboard
rules/: analyst.py  critic.py  reporter.py  tracker.py
security/: pii.py  policy_engine.py
workers/: celery_app.py  tasks_agent.py  tasks_compliance.py  tasks_ingest.py  tasks_report.py
(+41 files in other folders)
